[tool.poetry]
name = "uptimebot"
version = "0.1.0"
description = "Monitor server availability with UptimeBot"
authors = ["Kim Fom <57032138+kimfom01@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.13"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
idna = "3.10"
python-dotenv = "1.0.1"
requests = "2.32.3"
urllib3 = "2.2.3"
fastapi = {extras = ["standard"], version = "^0.115.5"}
celery = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
